add_library(test_bitcoin STATIC test_bitcoin.cpp test_bitcoin.h)
target_link_libraries(test_bitcoin PUBLIC core-cli Boost::unit_test_framework)
target_compile_definitions(test_bitcoin PUBLIC $<$<NOT:$<BOOL:${STATIC_BUILD}>>:BOOST_TEST_DYN_LINK>)

function(add_core_test target_name)
    add_executable(${target_name} ${ARGN})
    target_link_libraries(${target_name} PRIVATE test_bitcoin)
    add_test(NAME ${target_name} COMMAND ${target_name} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
endfunction()

add_core_test(core_accounting_tests accounting_tests.cpp)
add_core_test(core_alert_tests alert_tests.cpp)
add_core_test(core_allocator_tests allocator_tests.cpp)
add_core_test(core_base32_tests base32_tests.cpp)
add_core_test(core_base58_tests base58_tests.cpp)
add_core_test(core_base64_tests base64_tests.cpp)
add_core_test(core_bignum_tests bignum_tests.cpp)
add_core_test(core_bloom_tests bloom_tests.cpp)
add_core_test(core_canonical_tests canonical_tests.cpp)
add_core_test(core_checkblock_tests checkblock_tests.cpp)
add_core_test(core_Checkpoints_tests Checkpoints_tests.cpp)
add_core_test(core_compress_tests compress_tests.cpp)
add_core_test(core_consensus_tests consensus_tests.cpp)
add_core_test(core_DoS_tests DoS_tests.cpp)
add_core_test(core_getarg_tests getarg_tests.cpp)
add_core_test(core_key_tests key_tests.cpp)
add_core_test(core_miner_tests miner_tests.cpp)
add_core_test(core_mruset_tests mruset_tests.cpp)
add_core_test(core_multisig_tests multisig_tests.cpp)
add_core_test(core_netbase_tests netbase_tests.cpp)
add_core_test(core_pmt_tests pmt_tests.cpp)
add_core_test(core_rpc_tests rpc_tests.cpp)
add_core_test(core_script_P2SH_tests script_P2SH_tests.cpp)
add_core_test(core_script_tests script_tests.cpp)
add_core_test(core_scrypt_tests scrypt_tests.cpp)
add_core_test(core_serialize_tests serialize_tests.cpp)
add_core_test(core_sigopcount_tests sigopcount_tests.cpp)
add_core_test(core_transaction_tests transaction_tests.cpp)
add_core_test(core_uint160_tests uint160_tests.cpp)
add_core_test(core_uint256_tests uint256_tests.cpp)
add_core_test(core_util_tests util_tests.cpp)
add_core_test(core_wallet_tests wallet_tests.cpp)
